--- a/front/package.json
+++ b/front/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.30",
     "prettier": "3.0.3",
+    "sass": "^1.69.5",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
